Removed matvec.h from OpenMPTarget.

--- a/OpenMPTarget/CMakeLists.txt
+++ b/OpenMPTarget/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(MyTarget matvec)
 ADD_EXECUTABLE(
   ${MyTarget}
   ${CMAKE_SOURCE_DIR}/matvec.cpp
+  ${CMAKE_SOURCE_DIR}/arrayMD.h
   )
 
 if(${OPENMP})
