The arrayMD class now uses subArray function similar to subView of Kokkos. Only right layout is implemented in the class.

--- a/OpenMPTarget/CMakeLists.txt
+++ b/OpenMPTarget/CMakeLists.txt
@@ -29,10 +29,10 @@ if(${OPENMP})
 endif()
 
 if(${OPENMP_TARGET})
-  add_compile_definitions(OPENMP_TARGET=-DOPENMP_TARGET)
-  find_package(OpenMP)
-  if (OpenMP_CXX_FOUND)
-    add_compile_options(-fopenmp-targets=nvptx64-nvidia-cuda --cuda-path=${CUDA_PATH} -I${CUDA_PATH}/include -ffp-contract=fast)
-    target_link_libraries(${MyTarget} PUBLIC OpenMP::OpenMP_CXX)
-  endif()
+  find_package(CUDA REQUIRED)
+  find_package(OpenMP REQUIRED)
+  target_compile_definitions(${MyTarget} PRIVATE OPENMP_TARGET)
+  target_compile_options(${MyTarget} PRIVATE -fopenmp-targets=nvptx64-nvidia-cuda --cuda-path=${CUDA_TOOLKIT_ROOT_DIR} -I${CUDA_TOOLKIT_ROOT_DIR}/include -ffp-contract=fast)
+  target_link_libraries(${MyTarget} PUBLIC OpenMP::OpenMP_CXX)
+  target_link_options(${MyTarget} PRIVATE -fopenmp-targets=nvptx64-nvidia-cuda -fopenmp=libiomp5)
 endif()
