--- a/CUDA/CMakeLists.txt
+++ b/CUDA/CMakeLists.txt
@@ -18,21 +18,22 @@ find_package(CUDA REQUIRED)
 message(STATUS "CUDA ROOT DIR = ${CUDA_TOOLKIT_ROOT_DIR}")
 
 #SET(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
-SET(CMAKE_VERBOSE_MAKEFILE ON)
-set_source_files_properties(${CMAKE_SOURCE_DIR}/matvec.cpp PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ)
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${CUDA_TOOLKIT_ROOT_DIR}/lib64")
+#SET(CMAKE_VERBOSE_MAKEFILE ON)
+#set_source_files_properties(${CMAKE_SOURCE_DIR}/matvec.cpp PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ)
+#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${CUDA_TOOLKIT_ROOT_DIR}/lib64")
 
 #PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ
 ADD_EXECUTABLE(
   ${MyTarget}
   ${CMAKE_SOURCE_DIR}/matvec.cpp
-  ${CMAKE_SOURCE_DIR}/matvec_cudaKernels.cu
   ${CMAKE_SOURCE_DIR}/matvec.h
   ${CMAKE_SOURCE_DIR}/arrayMD.h
   ${CMAKE_SOURCE_DIR}/arrayMDgpu.h
   )
 
+SET_SOURCE_FILES_PROPERTIES(${CMAKE_SOURCE_DIR}/matvec.cpp PROPERTIES LANGUAGE CUDA)
 SET_TARGET_PROPERTIES(${MyTarget} PROPERTIES LINKER_LANGUAGE CUDA)
+
 target_include_directories(${MyTarget} PRIVATE ${CUDA_TOOLKIT_ROOT_DIR}/include)
 target_include_directories(${MyTarget} PRIVATE ${CUDA_TOOLKIT_ROOT_DIR}/samples/common/inc)
 set(CUDA_CXX_FLAGS "${CUDA_CXX_FLAGS} --cuda-gpu-arch=sm_70")
